Updated Components added Disclaimer and Terms of Use and Modified Logo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/medicopeer-logo.png" />
+    <link rel="icon" type="image/png" href="/src/assets/logoMedicoicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MedicoPeer - AI Health Assistant</title>
     <meta name="description" content="MedicoPeer - Advanced AI-powered health assistant providing personalized medical guidance through voice and multimedia interactions." />
@@ -12,12 +12,12 @@
     <meta property="og:title" content="MedicoPeer - AI Health Assistant" />
     <meta property="og:description" content="Get real-time medical insights and personalized health guidance with our advanced AI assistant through voice and multimedia interactions." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/src/assets/medicopeer-logo.png" />
+    <meta property="og:image" content="/src/assets/logoMedico.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="MedicoPeer - AI Health Assistant" />
     <meta name="twitter:description" content="Advanced AI health assistant with voice and multimedia capabilities" />
-    <meta name="twitter:image" content="/src/assets/medicopeer-logo.png" />
+    <meta name="twitter:image" content="/src/assets/logoMedico.png" />
   </head>
 
   <body>
